# ChangeLog for media-libs/libtheora
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libtheora/ChangeLog,v 1.104 2010/02/25 18:38:25 armin76 Exp $

  25 Feb 2010; Raúl Porcel <armin76@gentoo.org> libtheora-1.1.1.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #298039

  23 Feb 2010; Markos Chandras <hwoarang@gentoo.org> libtheora-1.1.1.ebuild:
  Stable on amd64 wrt bug #298039

  23 Feb 2010; Brent Baude <ranger@gentoo.org> libtheora-1.1.1.ebuild:
  Marking libtheora-1.1.1 ppc64 for bug 298039

  21 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  libtheora-1.1.1.ebuild:
  stable x86, security bug 298039

  20 Feb 2010; Jeroen Roovers <jer@gentoo.org> libtheora-1.1.1.ebuild:
  Stable for PPC (bug #298039).

  20 Feb 2010; Jeroen Roovers <jer@gentoo.org> libtheora-1.1.1.ebuild:
  Stable for HPPA (bug #298039).

*libtheora-1.1.1 (27 Oct 2009)

  27 Oct 2009; Alexis Ballier <aballier@gentoo.org> +libtheora-1.1.1.ebuild:
  version bump, by Arne Babenhauserheide <arne_bab@web.de>, bug #289908

*libtheora-1.1.0 (27 Sep 2009)

  27 Sep 2009; Alexis Ballier <aballier@gentoo.org> +libtheora-1.1.0.ebuild:
  version bump, by Arseny Solokha <b0ntrict0r@yandex.ru>, bug #286421

  29 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
  libtheora-1.1_beta3.ebuild,
  +files/libtheora-1.1_beta3-encoder_disabled.c:
  Fix building with USE="-encode".

*libtheora-1.1_beta3 (27 Aug 2009)

  27 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
  +libtheora-1.1_beta3.ebuild:
  Version bump.

  21 Jun 2009; Samuli Suominen <ssuominen@gentoo.org>
  libtheora-1.1_alpha2.ebuild:
  Build and install png2theora (and other binaries) if USE examples is used.

*libtheora-1.1_alpha2 (09 Jun 2009)

  09 Jun 2009; Samuli Suominen <ssuominen@gentoo.org>
  +libtheora-1.1_alpha2.ebuild:
  Version bump wrt #273374, thanks to Christopher Culver for reporting.

  15 May 2009; Raúl Porcel <armin76@gentoo.org> libtheora-1.0.ebuild: