@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX libtheora-1.0_beta2-flags.patch 763 RMD160 eb1d55ab98e5eae570845baf17eb93301271596c SHA1 b79a4338454e832d2b46df55bae1de967919eb24 SHA256 7efb7aec3e472914ffc0facbdc9769e088e5d69e285254d19f353555ca90c7d6
 AUX libtheora-1.1_beta3-encoder_disabled.c 2026 RMD160 72faa797c0dd7f8fe9a25031883da58a63e02aaf SHA1 58a47cd01aec7edf49070fd8bd69a88b568c3b1c SHA256 085a427ebd2102e7d8f743f2c672b57c5cb153dd4e73cbb86cdb801494e4cdc7
 DIST libtheora-1.0.tar.bz2 1652987 RMD160 f72d0a2ce8475a888ab67fd77b7126d66d537c9b SHA1 02717773001b44f95bc6c23111a89493a4a93f87 SHA256 3ae9df56e8fc75ffe26e63a13cae2ce79d079416175fb0baffe0e2de8dc91a6d
@@ -6,7 +9,14 @@ DIST libtheora-1.1.1.tar.bz2 1903175 RMD160 1d07234bd7e2296c61d6e30fe9816415aa7f
 DIST libtheora-1.1beta3.tar.bz2 1785382 RMD160 a51b6b5cdafe1130ee6439cea8e892f37a10b507 SHA1 abca97e4bd2caad896e1c2c1359626a9033da8b0 SHA256 d873f4c0181fa75b5e3cf069433740b2777810c2fd58055d4e62aaac0c239d5e
 EBUILD libtheora-1.0.ebuild 1673 RMD160 d4538008fa711f95b2f8dca23a8fdaac03178329 SHA1 44d6be1bb19a1d8d0d30db90ec098eb9554a83ba SHA256 7114d0552831d686462235d3e4ecbab5250b633faa5368dfa694dbc45f777d0e
 EBUILD libtheora-1.1.0.ebuild 1883 RMD160 276abf2b883a4e3f4d8ca22c619225b5719e07f1 SHA1 201d1cad706c34c4dab4bd515028068b9b226133 SHA256 642facfb71c9929cd2a2dfc360e2f4ea49f6cf7847004997244e1e900908a34a
-EBUILD libtheora-1.1.1.ebuild 1796 RMD160 4ed634bc99df1593e2071fb7bc6f1bebf32ff4b5 SHA1 892dcd441a742cd32733016b2486c41cab1f67e1 SHA256 998536baa1ce5473ec39756bebffe42c64f6c56b7cd080ecda9c9e1c15a18aa7
+EBUILD libtheora-1.1.1.ebuild 1893 RMD160 379133fb0007b0b1912323b6b96919eb0108d9a0 SHA1 76069216552576efd0c3e3d99b3951c5c5987f1a SHA256 90d9e3a179bf9ae0b5ebf6a212c83d8e6cd9ee0c02b4fcf9dee3a7931772178d
 EBUILD libtheora-1.1_beta3.ebuild 1867 RMD160 eb5081e433f76edc9e06cd458fbdcdc059f823c9 SHA1 8a64650e36fef35def9519d372cb78886f412b37 SHA256 5e2953d8c1f6a74c381c990ca0d85492aec370faa02dc504d81f82873d8c2d74
-MISC ChangeLog 14728 RMD160 3c28cdd31744c05e2bdcc94c2bde0a91511ab144 SHA1 d30a857bc7e0e50b573234f16ac0eec388cea714 SHA256 3b2d671b2d4971f0db25cd6524fef70d0ff21499de40fa97c83edf4762446bc3
+MISC ChangeLog 15065 RMD160 f4d5b496f43379384e384c799b4b359e58eec873 SHA1 3d4d95a22626ae2fb6f16242130cdd02c247d0fa SHA256 b1d049b263a23b463bfdbc488fc11c7312e3dbd2719b58cdd4db560a04ed28d7
 MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (SunOS)
+
+iEYEARECAAYFAk+5KKkACgkQX3X2B8XHTonVUgCfTCMOaOFJDATeFfofswesOs+7
+B3QAnjYn2aHq9GEMK/NfeUxzBlJhqYUZ
+=d4v/
+-----END PGP SIGNATURE-----
